updated cv template

--- a/index.html
+++ b/index.html
@@ -25,12 +25,12 @@
     <p>Data Scientist & Software Engineer — I build robust data products and services that turn messy data into decisions.</p>
     <div class="cta">
       <a class="btn" href="#projects">See my work</a>
-      <a class="btn outline" href="assets/Abhishek_CV.pdf" target="_blank" rel="noopener">View CV</a>
+      <a class="btn outline" href="assets/Abhishek_Kumar_CV.pdf" target="_blank" rel="noopener">View CV</a>
     </div>
     <div class="meta">
       <a href="https://github.com/" target="_blank" rel="noopener">GitHub</a> •
-      <a href="https://www.linkedin.com/" target="_blank" rel="noopener">LinkedIn</a> •
-      <a href="mailto:me@example.com">Email</a>
+      <a href="https://www.linkedin.com/in/abhi-km/" target="_blank" rel="noopener">LinkedIn</a> •
+      <a href="mailto:abhishek.kumar11101@gmail.com">Email</a>
     </div>
   </section>
 
@@ -38,7 +38,7 @@
     <h2>Selected Projects</h2>
     <div class="grid">
       <article class="card">
-        <h3>River Flow Forecasting (Taff)</h3>
+        <h3>River Flow Forecasting Using Machine Learning</h3>
         <p>Built end‑to‑end forecasting (SVR/ARIMA/RF) with ETL from NRFA gauges; achieved ~96.5% direction‑accuracy and low error across tributaries.</p>
         <p class="tags">Python · scikit‑learn · Pandas · Time series</p>
         <p><a href="#" target="_blank" rel="noopener">Code</a> · <a href="#" target="_blank" rel="noopener">Report</a></p>
@@ -68,7 +68,7 @@
 
   <section id="about" class="container">
     <h2>About</h2>
-    <p>MSc Data Science & Analytics (Cardiff, Distinction). 4 years in software engineering (fintech & e‑commerce), 1 year in analytics. I enjoy shipping reliable data systems and explaining results in plain English.</p>
+    <p>MSc Data Science & Analytics (Cardiff, Distinction). 1.5 year in Data analytics. 4 years in software engineering (fintech & e‑commerce),  I enjoy shipping reliable data systems and explaining results in plain English.</p>
   </section>
 
   <section id="contact" class="container">
