--- a/index.html
+++ b/index.html
@@ -25,11 +25,11 @@
     <p>Data Scientist & Software Engineer — I build robust data products and services that turn messy data into decisions.</p>
     <div class="cta">
       <a class="btn" href="#projects">See my work</a>
-      <a class="btn outline" href="assets/Abhishek_Kumar_CV.pdf" target="_blank" rel="noopener">View CV</a>
+      <a class="btn outline" href="assets/Abhishek_CV.pdf" target="_blank" rel="noopener">View CV</a>
     </div>
     <div class="meta">
-      <a href="https://github.com/" target="_blank" rel="noopener">GitHub</a> •
-      <a href="https://www.linkedin.com/in/abhi-km/" target="_blank" rel="noopener">LinkedIn</a> •
+      <a href="https://github.com/abhishek1110111" target="_blank" rel="noopener">GitHub</a> •
+      <a href="https://www.linkedin.com/abhi-km/" target="_blank" rel="noopener">LinkedIn</a> •
       <a href="mailto:abhishek.kumar11101@gmail.com">Email</a>
     </div>
   </section>
@@ -39,41 +39,88 @@
     <div class="grid">
       <article class="card">
         <h3>River Flow Forecasting Using Machine Learning</h3>
-        <p>Built end‑to‑end forecasting (SVR/ARIMA/RF) with ETL from NRFA gauges; achieved ~96.5% direction‑accuracy and low error across tributaries.</p>
-        <p class="tags">Python · scikit‑learn · Pandas · Time series</p>
+        <p>Built end-to-end forecasting (SVR/ARIMA/RF) with ETL from NRFA gauges; achieved ~96.5% direction-accuracy and low error across tributaries.</p>
+        <p class="tags">Python · scikit-learn · Pandas · Time series</p>
         <p><a href="#" target="_blank" rel="noopener">Code</a> · <a href="#" target="_blank" rel="noopener">Report</a></p>
       </article>
       <article class="card">
-        <h3>Energy Usage Prediction</h3>
+        <h3>Energy Usage Prediction Using Machine Learning</h3>
         <p>Modeled residential energy consumption with RF & NN; delivered actionable insights to reduce peak demand.</p>
         <p class="tags">Python · ML · EDA · Visualization</p>
         <p><a href="#" target="_blank" rel="noopener">Code</a></p>
       </article>
       <article class="card">
-        <h3>Gen‑AI Log Classifier</h3>
+        <h3>Gen-AI Log Classifier</h3>
         <p>Hybrid Regex + BERT + LR pipeline with FastAPI for log triage; boosts triage speed by 20%.</p>
         <p class="tags">NLP · FastAPI · Docker</p>
         <p><a href="#" target="_blank" rel="noopener">Code</a></p>
       </article>
+      <article class="card">
+        <h3>Gen-AI Log Classifier</h3>
+        <p>Hybrid Regex + BERT + LR pipeline with FastAPI for log triage; boosts triage speed by 20%.</p>
+        <p class="tags">NLP · FastAPI · Docker</p>
+        <p><a href="#" target="_blank" rel="noopener">Code</a></p>
+      </article>
+      <article class="card">
+      <h3>Crew Scheduling Forecasting — Jakarta 118 Ambulance</h3>
+      <p>Built demand forecasts for ambulance calls and staffing using Naïve, SES, Holt, Holt-Winters, and ARIMA models; produced low-error forecasts to support shift planning and SLA coverage.</p>
+      <p class="tags">Time Series · Forecasting · ARIMA · Holt-Winters · SES · Python</p>
+      <p><a href="#" target="_blank" rel="noopener">Code</a> · <a href="#" target="_blank" rel="noopener">Poster</a></p>
+    </article>
+
     </div>
   </section>
 
   <section id="skills" class="container">
     <h2>Skills</h2>
-    <ul class="chips">
-      <li>Python</li><li>SQL/MySQL</li><li>scikit‑learn</li><li>Pandas</li><li>Time Series</li>
-      <li>Docker</li><li>MLflow</li><li>Tableau/Power BI</li><li>AWS (basics)</li><li>Golang · PHP (Laravel)</li>
-    </ul>
+    <div class="skill-categories">
+      <article class="skill-card">
+        <h3>Programming Languages</h3>
+        <ul class="chips">
+          <li>Python</li><li>SQL</li><li>R (basic)</li>
+        </ul>
+      </article>
+      <article class="skill-card">
+        <h3>Data Science &amp; ML</h3>
+        <ul class="chips">
+          <li>Pandas</li><li>NumPy</li><li>Regex</li><li>scikit-learn</li><li>TensorFlow</li><li>NLP</li><li>LLM</li><li>HuggingFace</li><li>statistical Modelling</li><li>A/B Testing</li>
+        </ul>
+      </article>
+      <article class="skill-card">
+        <h3>Visualization</h3>
+        <ul class="chips">
+          <li>Tableau</li><li>Power BI</li><li>Matplotlib</li><li>Plotly</li><li>seaborn</li>
+        </ul>
+      </article>
+      <article class="skill-card">
+        <h3>Databases</h3>
+        <ul class="chips">
+          <li>MySQL</li>
+        </ul>
+      </article>
+      <article class="skill-card">
+        <h3>Tools &amp; Platforms</h3>
+        <ul class="chips">
+          <li>Docker</li><li>MLflow</li><li>AWS</li><li>Git &amp; GitHub</li><li>Excel</li>
+        </ul>
+      </article>
+      <article class="skill-card">
+        <h3>Tools &amp; Project Management</h3>
+        <ul class="chips">
+          <li>Jira</li><li>Notion</li><li>Asana</li><li>Clickup</li>
+        </ul>
+      </article>
+    </div>
   </section>
 
   <section id="about" class="container">
     <h2>About</h2>
-    <p>MSc Data Science & Analytics (Cardiff, Distinction). 1.5 year in Data analytics. 4 years in software engineering (fintech & e‑commerce),  I enjoy shipping reliable data systems and explaining results in plain English.</p>
+    <p>MSc Data Science & Analytics (Cardiff, Distinction). 1.5+ year in analytics & 4 years in software engineering (fintech & e-commerce). I enjoy shipping reliable data systems and explaining results in plain English.</p>
   </section>
 
   <section id="contact" class="container">
     <h2>Contact</h2>
-    <p>Let's talk! Email <a href="mailto:me@example.com">me@example.com</a> or message on <a href="https://www.linkedin.com/">LinkedIn</a>.</p>
+    <p>Let's talk! Email <a href="mailto:abhishek.kumar11101@gmail.com">me@example.com</a> or message on <a href="https://www.linkedin.com/abhi-km/">LinkedIn</a>.</p>
   </section>
 
   <footer class="site-footer">
