--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
         <li><a href="#projects">Projects</a></li>
         <li><a href="#skills">Skills</a></li>
         <li><a href="#about">About</a></li>
+        <li><a href="blog/index.html">Blogs</a></li>
         <li><a href="#contact">Contact</a></li>
       </ul>
     </nav>
@@ -26,23 +27,21 @@
       <p>Data Scientist & Software Engineer — I build robust data products and services that turn messy data into decisions.</p>
       <div class="cta">
         <a class="btn" href="#projects">See my work</a>
-        <a class="btn outline" href="assets/Abhishek_CV.pdf" target="_blank" rel="noopener">View CV</a>
+        <a class="btn outline" href="assets/Abhishek_Kumar_CV.pdf" target="_blank" rel="noopener">View CV</a>
       </div>
       <div class="meta">
         <a href="https://github.com/abhishek1110111" target="_blank" rel="noopener">GitHub</a> •
         <a href="https://www.linkedin.com/in/abhi-km/" target="_blank" rel="noopener">LinkedIn</a> •
-        <div class="meta">
-      <a href="mailto:abhishek.kumar11101@gmail.com?subject=Hello%20Abhishek&body=Hi%20Abhishek%2C%0D%0A">
-        Email
-      </a> •
-      <a href="https://mail.google.com/mail/?view=cm&fs=1&to=abhishek.kumar11101@gmail.com&su=Hello%20Abhishek" target="_blank" rel="noopener">
-        Gmail
-      </a> •
-      <a href="https://outlook.office.com/mail/deeplink/compose?to=abhishek.kumar11101@gmail.com&subject=Hello%20Abhishek" target="_blank" rel="noopener">
-        Outlook
-      </a>
-</div>
-
+        
+          <a style:>
+            Email : 
+          </a> 
+          <a href="https://mail.google.com/mail/?view=cm&fs=1&to=abhishek.kumar11101@gmail.com&su=Hello%20Abhishek" target="_blank" rel="noopener">
+            Gmail
+          </a> •
+          <a href="https://outlook.office.com/mail/deeplink/compose?to=abhishek.kumar11101@gmail.com&subject=Hello%20Abhishek" target="_blank" rel="noopener">
+            Outlook
+          </a>
       </div>
     </div>
 
@@ -157,27 +156,37 @@
       <article class="skill-card">
         <h3>Data Science &amp; ML</h3>
         <ul class="chips">
-          <li>Regex</li><li>scikit-learn</li><li>PyTorch</li><li>NLP</li><li>LLMs</li><li>Statistical Modelling</li><li>TensorFlow</li><li>HuggingFace</li>
+          <li>ML</li><li>Regex</li><li>NLP</li><li>LLMs</li><li>Scikit-learn</li><li>PyTorch</li><li>Stat Modelling</li><li>TensorFlow</li><li>HuggingFace</li>
         </ul>
       </article>
       <article class="skill-card">
         <h3>Visualization</h3>
         <ul class="chips">
-          <li>Tableau</li><li>Power BI</li><li>Matplotlib</li><li>Plotly</li><li>seaborn</li>
+          <li>Tableau</li><li>Power BI</li><li>Matplotlib</li><li>Plotly</li><li>seaborn</li><li>EDA</li><li>Dashboard Design</li>
         </ul>
       </article>
       <article class="skill-card">
         <h3>Other Skills</h3>
         <ul class="chips">
-          <li>Docker</li><li>MLflow</li><li>PySpark</li></li><li>AWS</li><li>Git &amp; GitHub</li><li>Excel</li><li>A/B Testing</li>
+          <li>Docker</li><li>MLflow</li><li>PySpark</li></li><li>AWS</li><li>Git &amp; GitHub</li><li>Excel</li><li>FastAPI</li><li>A/B Testing</li>
         </ul>
       </article>
     </div>
   </section>
 
+  <!-- <section id="certifications" class="container">
+  <h2>Certification</h2>
+  <article class="card cert">
+    <h3>Python Programming Certificate</h3>
+    <p class="small">HiSoft · 2019</p>
+    <p><a href="assets/python_training_cert.jpeg" target="_blank" rel="noopener">View</a></p>
+  </article>
+  </section> -->
+
+
   <section id="about" class="container">
     <h2>About</h2>
-    <p>Data scientist & software engineer with 1.5+ years in analytics and 4 years in Software engineering (fintech/e-commerce). MSc Data Science & Analytics (Cardiff University, Distinction); B.Tech Computer Science & Engineering (First Class). I turn messy data into decisions—clearly explained.</p>
+    <p>Data scientist & software engineer with 1.5+ years in analytics and 4 years in Software engineering (fintech/e-commerce). MSc Data Science & Analytics (Cardiff University, Distinction); B.Tech Computer Science & Engineering (First Class). I turn messy data into decisions.</p>
   </section>
 
   <section id="contact" class="container">
