change font style

--- a/index.html
+++ b/index.html
@@ -160,13 +160,13 @@
         </ul>
       </article>
       <article class="skill-card">
-        <h3>Visualization</h3>
+        <h3>Data Visualization & Reporting</h3>
         <ul class="chips">
           <li>Tableau</li><li>Power BI</li><li>Matplotlib</li><li>Plotly</li><li>seaborn</li><li>EDA</li><li>Dashboard Design</li>
         </ul>
       </article>
       <article class="skill-card">
-        <h3>Other Skills</h3>
+        <h3>Tools & Framework</h3>
         <ul class="chips">
           <li>Docker</li><li>MLflow</li><li>PySpark</li></li><li>AWS</li><li>Git &amp; GitHub</li><li>Excel</li><li>FastAPI</li><li>A/B Testing</li>
         </ul>
