make portfolio mobile friendly

--- a/index.html
+++ b/index.html
@@ -9,12 +9,13 @@
 </head>
 <body>
   <header class="site-header">
-    <nav class="container nav">
+    <nav class="navbar">
       <a class="logo" href="#">Abhishek</a>
-      <ul class="nav-links">
+      <input type="checkbox" id="menu-toggle">
+      <label for="menu-toggle" class="menu-icon">&#9776;</label>
+      <ul class="menu">
         <li><a href="#projects">Projects</a></li>
         <li><a href="#skills">Skills</a></li>
-        <li><a href="#about">About</a></li>
         <li><a href="blog/index.html">Blogs</a></li>
         <li><a href="#contact">Contact</a></li>
       </ul>
