--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
   <section class="hero container hero-split">
     <div class="hero-left">
       <h1>Hi, I'm <span>Abhishek</span>.</h1>
-      <p>Data Scientist & Software Engineer — I build robust data products and services that turn messy data into decisions.</p>
+      <p>Data Scientist & Analyst with 4+ years of Experience — I build robust data products and services that turn messy data into decisions.</p>
       <div class="cta">
         <a class="btn" href="#projects">See my work</a>
         <a class="btn outline" href="assets/Abhishek_Kumar_CV.pdf" target="_blank" rel="noopener">View CV</a>
@@ -109,35 +109,38 @@
     <div class="grid">
 
       <article class="card">
-        <h3>Data Analyst — Euroclick Ltd</h3>
+        <h3>Euroclick Ltd — Data Analyst</h3>
         <p class="small">Cardiff, UK · Mar 2024 – Present</p>
         <ul>
-          <li>Redesigned sales dashboards → ~15% sales uplift by highlighting high-margin products.</li>
-          <li>Trend analysis + stock alerts → stockouts reduced ~20%, overstock down ~10%.</li>
-          <li>Partnered with sales/marketing to turn insights into promos and inventory actions.</li>
+          <li>Redesigned sales dashboards, driving ~15% sales uplift by highlighting high-margin products.</li>
+          <li>Built stock alert models and trend analysis, reducing stockouts by ~40% and overstocks by ~10%.</li>
+          <li>Automated data pipelines with Python and SQL, cutting report generation time by ~30%.</li>
+          <li>Collaborated with sales & marketing teams to convert insights into promotions and inventory strategies.</li>
         </ul>
         <p class="tags">Power BI · Python · SQL · Excel</p>
       </article>
 
       <article class="card">
-        <h3>Software Engineer — Kissht/PaywithRing (Fintech)</h3>
+        <h3>Kissht/PaywithRing (Fintech) — SDE-Payments & Data Processing</h3>
         <p class="small">Mumbai, India · Jan 2023 – Sept 2023</p>
         <ul>
-          <li>Designed/distributed microservices for payments & disbursements → ~20% faster transaction flows.</li>
-          <li>Integrated bank/PSP APIs (Yes Bank, RazorpayX, Cashfree) with real-time Data Streaming.</li>
-          <li>Built robust MySQL data services handling high-volume financial Data.</li>
+          <li>Designed and deployed microservices for payment & disbursement systems, accelerating transaction flows by ~20%.
+          <li>Integrated APIs from banks/PSPs for real-time financial data processing.</li>
+          <li>Built and optimized MySQL-based services for high-volume financial transactions.</li>
+          <li>Leveraged Sentry for monitoring/reporting and Confluence for documenting workflows.</li>
         </ul>
-        <p class="tags">Python · PHP (Laravel) · MySQL · Microservices · APIs . Kafka · Golang</p>
+        <p class="tags">Python · MySQL · Microservices · APIs · Kafka · Monitoring (Sentry) · Documentation (Confluence)</p>
       </article>
 
       <article class="card">
-        <h3>Software Developer — Cedcommerce/Cedcoss Technologies</h3>
+        <h3>Cedcommerce/Cedcoss Technologies — Data Analyst</h3>
         <p class="small">Lucknow, India · Jan 2020 – Jan 2023</p>
         <ul>
-          <li>Maintained & Developed 20+ marketplace integrations (eBay, Amazon, OnBuy, Walmart) for listings & orders.</li>
-          <li>Analyzed customer/order data to surface trends and reduce refund-related queries.</li>
+          <li>Analyzed customer and order datasets across 20+ e-commerce platforms (eBay, Amazon, OnBuy, Walmart), surfacing trends that reduced refund-related queries.</li>
+          <li>Built automated reporting pipelines using Python & SQL, transforming raw marketplace data into actionable insights.</li>
+          <li>Contributed to marketplace integration systems while embedding analytics into operations and performance tracking.</li>
         </ul>
-        <p class="tags">Python · MySQL · PHP · AWS · APIs</p>
+        <p class="tags">Python · SQL · MySQL · Data Analysis · Data Visualization · GCP</p>
       </article>
 
     </div>
@@ -187,7 +190,7 @@
 
   <section id="about" class="container">
     <h2>About</h2>
-    <p>Data scientist & software engineer with 1.5+ years in analytics and 4 years in Software engineering (fintech/e-commerce). MSc Data Science & Analytics (Cardiff University, Distinction); B.Tech Computer Science & Engineering (First Class). I turn messy data into decisions.</p>
+    <p>Data scientist with 4+ years in analytics and Software engineering (fintech/e-commerce). MSc Data Science & Analytics (Cardiff University, Distinction); B.Tech Computer Science & Engineering (First Class). I turn messy data into decisions.</p>
   </section>
 
   <section id="contact" class="container">
