--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
     <div class="grid">
 
       <article class="card">
-        <h3>Euroclick Ltd — Data Analyst</h3>
+        <h3>Data Analyst — Euroclick Ltd</h3>
         <p class="small">Cardiff, UK · Mar 2024 – Present</p>
         <ul>
           <li>Redesigned sales dashboards, driving ~15% sales uplift by highlighting high-margin products.</li>
@@ -117,26 +117,25 @@
           <li>Automated data pipelines with Python and SQL, cutting report generation time by ~30%.</li>
           <li>Collaborated with sales & marketing teams to convert insights into promotions and inventory strategies.</li>
         </ul>
-        <p class="tags">Power BI · Python · SQL · Excel</p>
+        <p class="tags">Power BI · Python · SQL · Excel · Notion</p>
       </article>
 
       <article class="card">
-        <h3>Kissht/PaywithRing (Fintech) — SDE-Payments & Data Processing</h3>
+        <h3>SDE — Payments & Data Processing — Kissht</h3>
         <p class="small">Mumbai, India · Jan 2023 – Sept 2023</p>
         <ul>
           <li>Designed and deployed microservices for payment & disbursement systems, accelerating transaction flows by ~20%.
           <li>Integrated APIs from banks/PSPs for real-time financial data processing.</li>
           <li>Built and optimized MySQL-based services for high-volume financial transactions.</li>
-          <li>Leveraged Sentry for monitoring/reporting and Confluence for documenting workflows.</li>
         </ul>
-        <p class="tags">Python · MySQL · Microservices · APIs · Kafka · Monitoring (Sentry) · Documentation (Confluence)</p>
+        <p class="tags">Python · MySQL · AWS · APIs · Kafka · JIRA</p>
       </article>
 
       <article class="card">
-        <h3>Cedcommerce/Cedcoss Technologies — Data Analyst</h3>
+        <h3>Data Analyst — Cedcommerce/Cedcoss Technologies</h3>
         <p class="small">Lucknow, India · Jan 2020 – Jan 2023</p>
         <ul>
-          <li>Analyzed customer and order datasets across 20+ e-commerce platforms (eBay, Amazon, OnBuy, Walmart), surfacing trends that reduced refund-related queries.</li>
+          <li>Analyzed customer and order datasets across 20+ e-commerce platforms.</li>
           <li>Built automated reporting pipelines using Python & SQL, transforming raw marketplace data into actionable insights.</li>
           <li>Contributed to marketplace integration systems while embedding analytics into operations and performance tracking.</li>
         </ul>
