--- a/index.html
+++ b/index.html
@@ -132,10 +132,10 @@
       </article>
 
       <article class="card">
-        <h3>Data Analyst — Cedcommerce/Cedcoss Technologies</h3>
+        <h3>Software Developer — Cedcommerce/Cedcoss Technologies</h3>
         <p class="small">Lucknow, India · Jan 2020 – Jan 2023</p>
         <ul>
-          <li>Analyzed customer and order datasets across 20+ e-commerce platforms.</li>
+          <li>Built automated data processing systems handling diverse data formats and sources</li>
           <li>Built automated reporting pipelines using Python & SQL, transforming raw marketplace data into actionable insights.</li>
           <li>Contributed to marketplace integration systems while embedding analytics into operations and performance tracking.</li>
         </ul>
